--- a/index.html
+++ b/index.html
@@ -207,14 +207,14 @@
 										href="https://www.instagram.com/"
 										class="team-socials__page"
 									>
-										<svg class="team-social__page--link">
+										<svg class="team-socials__page--link">
 											<use href="./image/sprite.svg#icon-instagram"></use>
 										</svg>
 									</a>
 								</li>
 								<li class="team-socials__list">
 									<a href="https://www.twitter.com/" class="team-socials__page">
-										<svg class="team-social__page--link">
+										<svg class="team-socials__page--link">
 											<use href="./image/sprite.svg#icon-twitter"></use>
 										</svg>
 									</a>
@@ -224,7 +224,7 @@
 										href="https://www.facebook.com/"
 										class="team-socials__page"
 									>
-										<svg class="team-social__page--link">
+										<svg class="team-socials__page--link">
 											<use href="./image/sprite.svg#icon-facebook"></use>
 										</svg>
 									</a>
@@ -234,7 +234,7 @@
 										href="https://www.linkedin.com/"
 										class="team-socials__page"
 									>
-										<svg class="team-social__page--link">
+										<svg class="team-socials__page--link">
 											<use href="./image/sprite.svg#icon-linkedin"></use>
 										</svg>
 									</a>
@@ -254,28 +254,28 @@
 							<ul class="team-socials">
 								<li class="team-socials__list">
 									<a href="" class="team-socials__page">
-										<svg class="team-social__page--link">
+										<svg class="team-socials__page--link">
 											<use href="./image/sprite.svg#icon-instagram"></use>
 										</svg>
 									</a>
 								</li>
 								<li class="team-socials__list">
 									<a href="" class="team-socials__page">
-										<svg class="team-social__page--link">
+										<svg class="team-socials__page--link">
 											<use href="./image/sprite.svg#icon-twitter"></use>
 										</svg>
 									</a>
 								</li>
 								<li class="team-socials__list">
 									<a href="" class="team-socials__page">
-										<svg class="team-social__page--link">
+										<svg class="team-socials__page--link">
 											<use href="./image/sprite.svg#icon-facebook"></use>
 										</svg>
 									</a>
 								</li>
 								<li class="team-socials__list">
 									<a href="" class="team-socials__page">
-										<svg class="team-social__page--link">
+										<svg class="team-socials__page--link">
 											<use href="./image/sprite.svg#icon-linkedin"></use>
 										</svg>
 									</a>
@@ -295,28 +295,28 @@
 							<ul class="team-socials">
 								<li class="team-socials__list">
 									<a href="" class="team-socials__page">
-										<svg class="team-social__page--link">
+										<svg class="team-socials__page--link">
 											<use href="./image/sprite.svg#icon-instagram"></use>
 										</svg>
 									</a>
 								</li>
 								<li class="team-socials__list">
 									<a href="" class="team-socials__page">
-										<svg class="team-social__page--link">
+										<svg class="team-socials__page--link">
 											<use href="./image/sprite.svg#icon-twitter"></use>
 										</svg>
 									</a>
 								</li>
 								<li class="team-socials__list">
 									<a href="" class="team-socials__page">
-										<svg class="team-social__page--link">
+										<svg class="team-socials__page--link">
 											<use href="./image/sprite.svg#icon-facebook"></use>
 										</svg>
 									</a>
 								</li>
 								<li class="team-socials__list">
 									<a href="" class="team-socials__page">
-										<svg class="team-social__page--link">
+										<svg class="team-socials__page--link">
 											<use href="./image/sprite.svg#icon-linkedin"></use>
 										</svg>
 									</a>
@@ -336,28 +336,28 @@
 							<ul class="team-socials">
 								<li class="team-socials__list">
 									<a href="" class="team-socials__page">
-										<svg class="team-social__page--link">
+										<svg class="team-socials__page--link">
 											<use href="./image/sprite.svg#icon-instagram"></use>
 										</svg>
 									</a>
 								</li>
 								<li class="team-socials__list">
 									<a href="" class="team-socials__page">
-										<svg class="team-social__page--link">
+										<svg class="team-socials__page--link">
 											<use href="./image/sprite.svg#icon-twitter"></use>
 										</svg>
 									</a>
 								</li>
 								<li class="team-socials__list">
 									<a href="" class="team-socials__page">
-										<svg class="team-social__page--link">
+										<svg class="team-socials__page--link">
 											<use href="./image/sprite.svg#icon-facebook"></use>
 										</svg>
 									</a>
 								</li>
 								<li class="team-socials__list">
 									<a href="" class="team-socials__page">
-										<svg class="team-social__page--link">
+										<svg class="team-socials__page--link">
 											<use href="./image/sprite.svg#icon-linkedin"></use>
 										</svg>
 									</a>
