--- a/index.html
+++ b/index.html
@@ -564,8 +564,7 @@
 						<span class="modal__text">Почта</span>
 					</label>
 					<label class="modal__label">
-						<textarea class="modal__comments" name="comments" placeholder=" ">
-						</textarea>
+						<textarea class="modal__comments" name="comments" placeholder=" "></textarea>
 						<span class="modal__comments--name">Комментарий</span>
 					</label>
 					<label class="modal__agreement">
